fix spacing errors

--- a/src/style.css
+++ b/src/style.css
@@ -4,19 +4,26 @@
   margin: 0;
 }
 
+.container,
+header  {
+  margin:  0 40px;
+  padding: 20px;
+}
+
 .info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   border-bottom: 1px solid #ccc;
   align-items: center;
-  align-self: flex-start;
   width: 80%;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .inner-info {
   margin: 10px;
-  gap: 5px;
+  gap: 10px;
   display: flex;
-  justify-content: center;
+
+ text-align: justify;
 }
